--- a/settings.ini
+++ b/settings.ini
@@ -4,17 +4,23 @@ items=10
 
 [gui]
 font_size=14
-min_w=1000
-min_h=700
-max_w=1000
-max_h=700
+min_w=800
+min_h=600
+max_w=800
+max_h=600
 
 [colors]
 # default background color
-bg=#F8DCB1
+bg=#FCEDD5
 # a little bit darker than bg_color
 bg_darker=#E9B96E
 # color of elemnet if answer is right
 right=#8AE234
 # color of elemnet if answer is wrong
 wrong=#F34949
+
+[audio]
+play_audio=True
+library=/home/a/other/GoldenDict_Dicts/en_snd/
+format=.wav
+platform=linux
